--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
+
     <%= csrf_meta_tags %>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -49,13 +49,59 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <% @containers.each do |container| %>
-              <p><%= link_to container.name, container_path(container.short_id) %> <% if container.running? %><span class="label label-success">Running</span><% end %></p>
-            <% end %>
+      <!-- <div class="row">
+        <div class="col-sm-12 col-md-2 menu">
+          test
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      </div> -->
+      <div class="row">
+        <div class="col-sm-2 sidebar">
+          <div class="pane containers">
+            <ul class="states">
+              <li><header><h2>Active containers</h2></header>
+                <ul id="running">
+                  <% @containers.each do |container| %>
+                    <% if container.state == "running" || container.state == "restarting" %>
+                      <li class="<%= (@container && @container.short_id == container.short_id) ? "current" :  "" %>">
+                        <div class="docker-container" data-state="<%= container.state %>">
+                          <%= link_to container.name, container_path(container.short_id) %> <% if container.running? %><span class="label label-success">Running</span><% end %>
+                        </div>
+                      </li>
+                    <% end %>
+                  <% end %>
+                </ul>
+              </li>
+              <li><header><h2>Paused</h2></header>
+                <ul id="paused">
+                  <% @containers.each do |container| %>
+                    <% if container.state == "pausing" %>
+                    <li class="<%= (@container && @container.short_id == container.short_id) ? "current" :  "" %>">
+                      <div class="docker-container" data-state="<%= container.state %>">
+                        <%= link_to container.name, container_path(container.short_id) %> <% if container.running? %><span class="label label-success">Running</span><% end %>
+                      </div>
+                    </li>
+                    <% end %>
+                  <% end %>
+                </ul>
+              </li>
+              <li><header><h2>Off</h2></header>
+                <ul id="off">
+                  <% @containers.each do |container| %>
+                    <% if container.state == "off" %>
+                    <li class="<%= (@container && @container.short_id == container.short_id) ? "current" :  "" %>">
+                      <div class="docker-container" data-state="<%= container.state %>">
+                        <%= link_to container.name, container_path(container.short_id) %> <% if container.running? %><span class="label label-success">Running</span><% end %>
+                      </div>
+                    </li>
+                    <% end %>
+                  <% end %>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+        <div class="col-sm-10 main">
           <%= yield %>
         </div>
       </div>
@@ -64,12 +110,13 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <%#
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <%#
     <script src="../../dist/js/bootstrap.min.js"></script>
     <script src="../../assets/js/docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     %>
+    <%= javascript_include_tag "application" %>
   </body>
 </html>
