Small css changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,5 +11,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "base";
+@import "sidebar";
 @import "dashboard";
-@import "custom";
+@import "container";
