--- a/app/views/containers/index.html.erb
+++ b/app/views/containers/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render "sidebar" %>
+<% end %>
+
 <div class="dashboard">
   <table class="overview">
     <tr>
