--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,12 +1,14 @@
-<h1>Images</h1>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Full name</th>
-    <th>Id</th>
-    <th></th>
-  </tr>
-  <%= render collection: @images, partial: 'image' %>
-</table>
-
-
+<% content_for :sidebar do %>
+<%= render "sidebar" %>
+<% end %>
+<%
+#<h1>Images</h1>
+#<table>
+#  <tr>
+#    <th>Name</th>
+#    <th>Full name</th>
+#    <th>Id</th>
+#  </tr>
+#  <%= render collection: @images, partial: 'image' 
+#</table>
+%>
