--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,5 +75,6 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     %>
     <%= javascript_include_tag "application" %>
+    <%= content_for :javascript %>
   </body>
 </html>
