--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -2,4 +2,5 @@
 <td><%= link_to "#{image.repo_tag.name}:#{image.repo_tag.tag}", image_path(CGI.escape(image.repo_tag.to_s))  %></td>
 <td><%= image.repo_tag %></td>
 <td><%= image.short_id %></td>
+<td><%= $image_status[image.repo_tag.to_s] %>
 </tr>
