--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -5,11 +5,23 @@
   <h1 class="page-header"><%= @image.short_id %></h1>
 </header>
 <div class="view active">
+  <ul>
+    <% @image.data.each do |data| %>
+    <li>
 
+      <% if data[0].include? "Config" %>
+      <span><%= data[0] %></span> : <span></span>
+      <ul>
+        <% data[1].each do |data| %>
+        <li><span><%= data[0] %></span> : <span><%= data[1] %></span></li>
+        <% end %>
+      </ul>
+      <% else %>
+      <span><%= data[0] %></span> : <span><%= data[1] %></span>
+      <% end %>
+    </li>
+
+
+    <% end %>
+  </ul>
 </div>
-<!-- <h1><%= params[:id] %></h1>
-
-<dl>
-  <dt>Created</dt>
-  <dd><%= @image.created %></dd>
-</dl> -->
