Updated images to show info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="<%= params[:controller] %>">
 
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
