--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -7,13 +7,14 @@
        width: 33.333%;
      }
      h1 {
-       font-family: 'Advent Pro', sans-serif;
+       font-family: $display-font;
        font-size: 7em;
        color: #999;
        letter-spacing: 10px;
      }
      p {
        font-size: 1.5em;
+       text-transform: uppercase;
      }
 
    }
